add type money currency to amount, balance

--- a/src/app/account-transfers/edit-standing-instructions/edit-standing-instructions.component.html
+++ b/src/app/account-transfers/edit-standing-instructions/edit-standing-instructions.component.html
@@ -94,7 +94,7 @@
 
           <mat-form-field fxFlex="48%">
             <mat-label>Amount</mat-label>
-            <input matInput formControlName="amount">
+            <input currencyMask matInput formControlName="amount">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
