--- a/src/app/account-transfers/view-account-transfer/view-account-transfer.component.html
+++ b/src/app/account-transfers/view-account-transfer/view-account-transfer.component.html
@@ -12,7 +12,7 @@
 
         <div fxFlexFill>
           <span fxFlex="40%">Transaction Amount:</span>
-          <span fxFlex="60%">{{ viewAccountTransferData.transferAmount }}</span>
+          <span fxFlex="60%">{{ viewAccountTransferData.transferAmount | money}}</span>
         </div>
 
         <div fxFlexFill>
