--- a/src/app/account-transfers/view-standing-instructions/view-standing-instructions.component.html
+++ b/src/app/account-transfers/view-standing-instructions/view-standing-instructions.component.html
@@ -85,7 +85,7 @@
 
         <div fxFlexFill>
           <span fxFlex="40%">Amount:</span>
-          <span fxFlex="60%">{{ standingInstructionsData.amount }}</span>
+          <span fxFlex="60%">{{ standingInstructionsData.amount | money}}</span>
         </div>
 
         <div fxFlexFill>
