--- a/src/app/deposits/recurring-deposits/recurring-deposits-account-actions/close-recurring-deposits-account/close-recurring-deposits-account.component.html
+++ b/src/app/deposits/recurring-deposits/recurring-deposits-account-actions/close-recurring-deposits-account/close-recurring-deposits-account.component.html
@@ -23,7 +23,7 @@
 
           <mat-form-field>
             <mat-label>Maturity Amount</mat-label>
-            <input matInput required formControlName="maturityAmount">
+            <input matInput currencyMask type="text" required formControlName="maturityAmount">
             <mat-error *ngIf="closeRecurringDepositForm.controls.maturityAmount.hasError('required')">
               Maturity Amount <strong>is required</strong>
             </mat-error>
