--- a/src/app/loans/loans-view/loan-account-actions/create-guarantor/create-guarantor.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/create-guarantor/create-guarantor.component.html
@@ -51,7 +51,7 @@
 
               <mat-form-field>
                 <mat-label>Amount</mat-label>
-                <input type="number" matInput required formControlName="amount" required>
+                <input currencyMask type="text" matInput required formControlName="amount" required>
               </mat-form-field>
 
             </ng-container>
