--- a/src/app/loans/loans-view/loan-account-actions/foreclosure/foreclosure.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/foreclosure/foreclosure.component.html
@@ -31,17 +31,17 @@
 
           <mat-form-field>
             <mat-label>Fee Amount</mat-label>
-            <input matInput required formControlName="outstandingFeeChargesPortion">
+            <input matInput currencyMask type="text" required formControlName="outstandingFeeChargesPortion">
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Penalty Amount</mat-label>
-            <input matInput required formControlName="outstandingPenaltyChargesPortion">
+            <input matInput currencyMask type="text" required formControlName="outstandingPenaltyChargesPortion">
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Transaction Amount</mat-label>
-            <input matInput required formControlName="transactionAmount">
+            <input matInput currencyMask type="text" required formControlName="transactionAmount">
           </mat-form-field>
 
           <mat-form-field>
