--- a/src/app/loans/loans-view/loan-account-actions/write-off-page/write-off-page.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/write-off-page/write-off-page.component.html
@@ -21,7 +21,7 @@
 
           <mat-form-field>
             <mat-label>Amount</mat-label>
-            <input matInput formControlName="amount">
+            <input matInput currencyMask type="text" formControlName="amount">
           </mat-form-field>
 
           <mat-form-field>
