--- a/src/app/products/loan-products/loan-product-stepper/loan-product-settings-step/loan-product-settings-step.component.html
+++ b/src/app/products/loan-products/loan-product-stepper/loan-product-settings-step/loan-product-settings-step.component.html
@@ -383,7 +383,7 @@
 
       <mat-form-field fxFlex="48%">
         <mat-label>Maximum allowed outstanding balance</mat-label>
-        <input type="number" matInput formControlName="outstandingLoanBalance">
+        <input currencyMask type="text" matInput formControlName="outstandingLoanBalance">
       </mat-form-field>
 
     </div>
