--- a/src/app/account-transfers/list-transactions/list-transactions.component.html
+++ b/src/app/account-transfers/list-transactions/list-transactions.component.html
@@ -49,7 +49,7 @@
 
     <ng-container matColumnDef="amount">
       <th mat-header-cell *matHeaderCellDef> Amount </th>
-      <td mat-cell *matCellDef="let transaction"> {{ transaction.transferAmount }} </td>
+      <td mat-cell *matCellDef="let transaction"> {{ transaction.transferAmount | money}} </td>
     </ng-container>
 
     <ng-container matColumnDef="notes">
