--- a/src/app/clients/clients-view/charges/client-pay-charges/client-pay-charges.component.html
+++ b/src/app/clients/clients-view/charges/client-pay-charges/client-pay-charges.component.html
@@ -5,15 +5,15 @@
     <form [formGroup]="transactionForm" (ngSubmit)="submit()">
 
       <div fxLayout="column">
-  
+
         <mat-form-field>
           <mat-label> Amount </mat-label>
-          <input matInput required autofocus formControlName="amount">
+          <input matInput currencyMask type="text" required autofocus formControlName="amount">
           <mat-error *ngIf="transactionForm.controls.amount.hasError('required')">
             Amount <strong>is required</strong>
           </mat-error>
         </mat-form-field>
-  
+
         <mat-form-field>
           <mat-label> Transaction date </mat-label>
           <input matInput [min]="minDate" [matDatepicker]="transactionDatePicker" required formControlName="transactionDate">
@@ -23,14 +23,14 @@
             Transaction date <strong>is required</strong>
           </mat-error>
         </mat-form-field>
-  
+
       </div>
-  
+
       <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="5px">
         <button type="button" mat-raised-button [routerLink]="['../','general']">Cancel</button>
         <button mat-raised-button color="primary" [disabled]="!transactionForm.valid">Submit</button>
       </div>
-  
+
     </form>
 
   </mat-card>
