--- a/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-preview-step/fixed-deposit-account-preview-step.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-preview-step/fixed-deposit-account-preview-step.component.html
@@ -44,7 +44,7 @@
 
   <div fxFlexFill>
     <span fxFlex="40%">Fixed Deposit Amount:</span>
-    <span fxFlex="60%">{{ fixedDepositAccountData.depositAmount }}</span>
+    <span fxFlex="60%">{{ fixedDepositAccountData.depositAmount | money}}</span>
   </div>
 
   <div fxFlexFill>
@@ -289,7 +289,7 @@
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
         <td mat-cell *matCellDef="let charge">
-          {{ charge.amount }}
+          {{ charge.amount | money}}
         </td>
       </ng-container>
 
