--- a/src/app/deposits/recurring-deposits/recurring-deposits-account-stepper/recurring-deposits-account-interest-rate-chart-step/recurring-deposits-account-interest-rate-chart-step.component.html
+++ b/src/app/deposits/recurring-deposits/recurring-deposits-account-stepper/recurring-deposits-account-interest-rate-chart-step/recurring-deposits-account-interest-rate-chart-step.component.html
@@ -120,7 +120,7 @@
               <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef> Interest </th>
                 <td mat-cell *matCellDef="let incentive">
-                  {{ incentive.amount }}
+                  {{ incentive.amount | money }}
                 </td>
               </ng-container>
 
