--- a/src/app/deposits/recurring-deposits/recurring-deposits-account-stepper/recurring-deposits-account-preview-step/recurring-deposits-account-preview-step.component.html
+++ b/src/app/deposits/recurring-deposits/recurring-deposits-account-stepper/recurring-deposits-account-preview-step/recurring-deposits-account-preview-step.component.html
@@ -79,7 +79,7 @@
 
   <div fxFlexFill>
     <span fxFlex="40%">Recurring Deposit Amount:</span>
-    <span fxFlex="60%">{{ recurringDepositAccountData?.mandatoryRecommendedDepositAmount}}</span>
+    <span fxFlex="60%">{{ recurringDepositAccountData?.mandatoryRecommendedDepositAmount | money}}</span>
   </div>
 
   <div fxFlexFill>
@@ -252,7 +252,7 @@
                 <ng-container matColumnDef="amount">
                   <th mat-header-cell *matHeaderCellDef> Interest </th>
                   <td mat-cell *matCellDef="let incentive">
-                    {{ incentive.amount }}
+                    {{ incentive.amount | money }}
                   </td>
                 </ng-container>
 
@@ -299,7 +299,7 @@
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
         <td mat-cell *matCellDef="let charge">
-          {{ charge.amount }}
+          {{ charge.amount | money}}
         </td>
       </ng-container>
 
