--- a/src/app/deposits/recurring-deposits/recurring-deposits-account-view/interest-rate-chart-tab/interest-rate-chart-tab.component.html
+++ b/src/app/deposits/recurring-deposits/recurring-deposits-account-view/interest-rate-chart-tab/interest-rate-chart-tab.component.html
@@ -102,7 +102,7 @@
                 <ng-container matColumnDef="amount">
                   <th mat-header-cell *matHeaderCellDef> Interest </th>
                   <td mat-cell *matCellDef="let incentive">
-                    {{ incentive.amount }}
+                    {{ incentive.amount | money }}
                   </td>
                 </ng-container>
 
