--- a/src/app/groups/groups-view/general-tab/general-tab.component.html
+++ b/src/app/groups/groups-view/general-tab/general-tab.component.html
@@ -265,12 +265,12 @@
 
       <ng-container matColumnDef="Loan Balance">
         <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.LoanBalance' |translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.loanBalance}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.loanBalance | money }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Amount Paid">
         <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AmountPaid' |translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.amountPaid}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.amountPaid | money }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Type">
@@ -331,12 +331,12 @@
 
       <ng-container matColumnDef="Loan Balance">
         <th mat-header-cell *matHeaderCellDef>{{'Group_Component.General_tab.LoanBalance' |translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.loanBalance}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.loanBalance | money}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Amount Paid">
         <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.AmountPaid' |translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.accountBalance}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.accountBalance | money}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Type">
