--- a/src/app/loans/loans-view/loan-account-actions/approve-loan/approve-loan.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/approve-loan/approve-loan.component.html
@@ -29,12 +29,12 @@
 
           <mat-form-field>
             <mat-label>Approved Amount</mat-label>
-            <input matInput type="number" formControlName="approvedLoanAmount">
+            <input matInput currencyMask type="text" formControlName="approvedLoanAmount">
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Transaction Amount</mat-label>
-            <input matInput type="number" required formControlName="approvedLoanAmount" required>
+            <input matInput currencyMask type="text" required formControlName="approvedLoanAmount" required>
             <mat-error *ngIf="approveLoanForm.controls.approvedLoanAmount.hasError('required')">
               Transaction Amount is <strong>required</strong>
             </mat-error>
