--- a/src/app/loans/loans-view/loan-account-actions/recovery-repayment/recovery-repayment.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/recovery-repayment/recovery-repayment.component.html
@@ -21,7 +21,7 @@
 
           <mat-form-field>
             <mat-label>Transaction Amount</mat-label>
-            <input matInput required formControlName="transactionAmount">
+            <input matInput currencyMask type="text" required formControlName="transactionAmount">
             <mat-error *ngIf="recoveryRepaymentLoanForm.controls.transactionAmount.hasError('required')">
               Transaction Amount <strong>is required</strong>
             </mat-error>
