--- a/src/app/loans/loans-view/loan-account-actions/waive-interest/waive-interest.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/waive-interest/waive-interest.component.html
@@ -21,7 +21,7 @@
 
           <mat-form-field>
             <mat-label>Transaction amount</mat-label>
-            <input matInput required formControlName="transactionAmount">
+            <input matInput currencyMask type="text" required formControlName="transactionAmount">
             <mat-error *ngIf="loanInterestForm.controls.transactionAmount.hasError('required')">
               Transaction Amount is <strong>required</strong>
             </mat-error>
