--- a/src/app/navigation/savings-account-table/savings-account-table.component.html
+++ b/src/app/navigation/savings-account-table/savings-account-table.component.html
@@ -5,7 +5,7 @@
   </mat-form-field>
   <button mat-raised-button color="primary" (click)="toggleClosed()">
     {{ showClosed ? 'View Active' : 'View Closed' }}
-  </button>  
+  </button>
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort>
@@ -22,7 +22,7 @@
 
   <ng-container matColumnDef="accountBalance">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Balance </th>
-    <td mat-cell *matCellDef="let savingsAccount">{{ savingsAccount.accountBalance }}</td>
+    <td mat-cell *matCellDef="let savingsAccount">{{ savingsAccount.accountBalance | money }}</td>
   </ng-container>
 
   <ng-container matColumnDef="Status">
@@ -30,7 +30,7 @@
     <td mat-cell *matCellDef="let savingsAccount">
       <span [className]="savingsAccount.status.code | statusLookup">
         <fa-icon matTooltip="{{ savingsAccount.status.value }}" matTooltipPosition="right" icon="circle" size="md"></fa-icon>
-      </span>  
+      </span>
     </td>
   </ng-container>
 
