--- a/src/app/products/charges/create-charge/create-charge.component.html
+++ b/src/app/products/charges/create-charge/create-charge.component.html
@@ -135,7 +135,7 @@
 
             <mat-form-field fxFlex="48%">
               <mat-label>Amount</mat-label>
-              <input matInput required formControlName="amount">
+              <input matInput currencyMask type="text" required formControlName="amount">
               <mat-error *ngIf="chargeForm.controls.amount.hasError('required')">
                 Amount is <strong>required</strong>
               </mat-error>
@@ -168,7 +168,7 @@
                   {{ incomeOrLiabilityAccount.name }}
                 </mat-option>
               </mat-select>
-            </mat-form-field>  
+            </mat-form-field>
 
             <mat-form-field fxFlex="48%">
               <mat-label>Tax Group</mat-label>
