--- a/src/app/products/loan-products/loan-product-stepper/loan-product-preview-step/loan-product-preview-step.component.html
+++ b/src/app/products/loan-products/loan-product-stepper/loan-product-preview-step/loan-product-preview-step.component.html
@@ -452,7 +452,7 @@
     <span fxFlex="60%">{{ loanProduct.maxTrancheCount }}</span>
     <div fxFlexFill *ngIf="loanProduct.outstandingLoanBalance">
       <span fxFlex="40%">Maximum allowed outstanding balance:</span>
-      <span fxFlex="60%">{{ loanProduct.outstandingLoanBalance }}</span>
+      <span fxFlex="60%">{{ loanProduct.outstandingLoanBalance | money }}</span>
     </div>
   </div>
 
@@ -509,7 +509,7 @@
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
         <td mat-cell *matCellDef="let charge">
-          {{ charge.amount  }}
+          {{ charge.amount | money }}
         </td>
       </ng-container>
 
@@ -548,7 +548,7 @@
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
         <td mat-cell *matCellDef="let overdueCharge">
-          {{ overdueCharge.amount  }}
+          {{ overdueCharge.amount | money }}
         </td>
       </ng-container>
 
