--- a/src/app/products/loan-products/view-loan-product/view-loan-product.component.html
+++ b/src/app/products/loan-products/view-loan-product/view-loan-product.component.html
@@ -465,7 +465,7 @@
           <span fxFlex="60%">{{ loanProduct.maxTrancheCount }}</span>
           <div fxFlexFill *ngIf="loanProduct.outstandingLoanBalance">
             <span fxFlex="40%">Maximum allowed outstanding balance:</span>
-            <span fxFlex="60%">{{ loanProduct.outstandingLoanBalance }}</span>
+            <span fxFlex="60%">{{ loanProduct.outstandingLoanBalance | money }}</span>
           </div>
         </div>
 
@@ -522,7 +522,7 @@
             <ng-container matColumnDef="amount">
               <th mat-header-cell *matHeaderCellDef> Amount </th>
               <td mat-cell *matCellDef="let charge">
-                {{ charge.amount  }}
+                {{ charge.amount | money }}
               </td>
             </ng-container>
 
@@ -561,7 +561,7 @@
             <ng-container matColumnDef="amount">
               <th mat-header-cell *matHeaderCellDef> Amount </th>
               <td mat-cell *matCellDef="let overdueCharge">
-                {{ overdueCharge.amount  }}
+                {{ overdueCharge.amount | money }}
               </td>
             </ng-container>
 
