--- a/src/app/products/recurring-deposit-products/recurring-deposit-product-stepper/recurring-deposit-product-interest-rate-chart-step/recurring-deposit-product-interest-rate-chart-step.component.html
+++ b/src/app/products/recurring-deposit-products/recurring-deposit-product-stepper/recurring-deposit-product-interest-rate-chart-step/recurring-deposit-product-interest-rate-chart-step.component.html
@@ -173,7 +173,7 @@
                     <ng-container matColumnDef="amount">
                       <th mat-header-cell *matHeaderCellDef> Interest </th>
                       <td mat-cell *matCellDef="let incentive">
-                        {{ incentive.amount }}
+                        {{ incentive.amount | money }}
                       </td>
                     </ng-container>
 
