--- a/src/app/products/share-products/dividends-share-product/dividends.component.html
+++ b/src/app/products/share-products/dividends-share-product/dividends.component.html
@@ -35,7 +35,7 @@
 
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
-        <td mat-cell *matCellDef="let dividend"> {{ dividend.amount }}</td>
+        <td mat-cell *matCellDef="let dividend"> {{ dividend.amount | money }}</td>
       </ng-container>
 
       <ng-container matColumnDef="status">
