--- a/src/app/products/share-products/share-product-stepper/share-product-charges-step/share-product-charges-step.component.html
+++ b/src/app/products/share-products/share-product-stepper/share-product-charges-step/share-product-charges-step.component.html
@@ -35,7 +35,7 @@
     <ng-container matColumnDef="amount">
       <th mat-header-cell *matHeaderCellDef> Amount </th>
       <td mat-cell *matCellDef="let charge">
-        {{ charge.amount }}
+        {{ charge.amount | money }}
       </td>
     </ng-container>
 
