--- a/src/app/savings/saving-account-actions/apply-annual-fees-savings-account/apply-annual-fees-savings-account.component.html
+++ b/src/app/savings/saving-account-actions/apply-annual-fees-savings-account/apply-annual-fees-savings-account.component.html
@@ -20,7 +20,7 @@
 
           <mat-form-field>
             <mat-label>Amount</mat-label>
-            <input type="number" formControlName="amount" required matInput />
+            <input currencyMask type="text" formControlName="amount" required matInput />
             <mat-error *ngIf="applyAnnualFeesForm.controls.amount.hasError('required')">
               Amount is <strong>required</strong>
             </mat-error>
