--- a/src/app/savings/savings-account-stepper/savings-account-preview-step/savings-account-preview-step.component.html
+++ b/src/app/savings/savings-account-stepper/savings-account-preview-step/savings-account-preview-step.component.html
@@ -70,7 +70,7 @@
 
   <div fxFlexFill *ngIf="savingsAccount.minRequiredOpeningBalance">
     <span fxFlex="40%">Minimum Opening Balance:</span>
-    <span fxFlex="60%">{{ savingsAccount.minRequiredOpeningBalance }}</span>
+    <span fxFlex="60%">{{ savingsAccount.minRequiredOpeningBalance | money }}</span>
   </div>
 
   <div fxFlexFill>
@@ -110,7 +110,7 @@
 
   <div fxFlexFill *ngIf="savingsAccount.minRequiredBalance">
     <span fxFlex="40%">Minimum Balance:</span>
-    <span fxFlex="60%">{{ savingsAccount.minRequiredBalance }}</span>
+    <span fxFlex="60%">{{ savingsAccount.minRequiredBalance | money }}</span>
   </div>
 
   <div fxFlexFill *ngIf="savingsAccount.charges.length" fxLayout="row wrap" fxLayout.lt-md="column">
@@ -138,7 +138,7 @@
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
         <td mat-cell *matCellDef="let charge">
-          {{ charge.amount }}
+          {{ charge.amount | money }}
         </td>
       </ng-container>
 
@@ -151,20 +151,20 @@
           <span *ngIf="charge.chargeTimeType.value === 'Monthly Fee' || charge.chargeTimeType.value === 'Annual Fee'">
             {{(charge.feeOnMonthDay | date) || 'Unassigned'}}
           </span>
-          <span 
+          <span
             *ngIf="!(charge.chargeTimeType.value === 'Monthly Fee' || charge.chargeTimeType.value === 'Annual Fee'
               || charge.chargeTimeType.value === 'Specified due date' || charge.chargeTimeType.value === 'Weekly Fee')">
             N/A
           </span>
         </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="repaymentsEvery">
         <th mat-header-cell *matHeaderCellDef> Repayments Every </th>
         <td mat-cell *matCellDef="let charge">
-          {{ charge.feeInterval || 'Not Provided' }} 
+          {{ charge.feeInterval || 'Not Provided' }}
         </td>
-      </ng-container>  
+      </ng-container>
 
       <ng-container matColumnDef="chargeTimeType">
         <th mat-header-cell *matHeaderCellDef> Collected On </th>
