--- a/src/app/shares/shares-account-view/dividends-tab/dividends-tab.component.html
+++ b/src/app/shares/shares-account-view/dividends-tab/dividends-tab.component.html
@@ -15,7 +15,7 @@
 
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
-        <td mat-cell *matCellDef="let dividend"> {{shareAccountData.currency.displaySymbol}}&nbsp;{{dividend.amount}} </td>
+        <td mat-cell *matCellDef="let dividend"> {{shareAccountData.currency.displaySymbol}}&nbsp;{{dividend.amount | money}} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionReference">
