--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -54,8 +54,8 @@
           </ng-container>
 
           <ng-container matColumnDef="documents">
-            <th mat-header-cell *matHeaderCellDef matTooltip="Hình ảnh CMND/CCCD">Đính kèm</th>
-            <td mat-cell *matCellDef="let identity; let i = index">
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef matTooltip="Hình ảnh CMND/CCCD">Đính kèm</th>
+            <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity; let ind = renderIndex">
               <div *ngFor="let document of identity.documents">
                 {{ document.name }}
                 <fa-icon
@@ -67,7 +67,7 @@
               <fa-icon
                 style="color: green"
                 icon="cloud-upload-alt"
-                (click)="uploadDocument(i, identity.id, false)"
+                (click)="uploadDocument(ind, identity.id, false)"
                 *midasHasPermission="'CREATE_DOCUMENT'"
               ></fa-icon>
             </td>
