--- a/src/app/loans/custom-dialog/loan-account-load-documents-dialog/loan-account-load-documents-dialog.component.html
+++ b/src/app/loans/custom-dialog/loan-account-load-documents-dialog/loan-account-load-documents-dialog.component.html
@@ -1,28 +1,26 @@
-<h1 mat-dialog-title>Load Loan Document</h1>
-
+ <h1 mat-dialog-title>Upload Loan Documents</h1>
 <div>
-  <form [formGroup]="uploadDocumentForm" fxLayout="column">
+    <form [formGroup]="uploadDocumentForm" fxLayout="column">
 
-    <mat-form-field fxFlex>
-      <mat-label>File Name</mat-label>
-      <input formControlName="name" required matInput />
-      <mat-error *ngIf="uploadDocumentForm.controls.name.hasError('required')">
-        File Name is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>
+        <mat-form-field fxFlex>
+            <mat-label>File Name</mat-label>
+            <input formControlName="fileName" required matInput />
+            <mat-error *ngIf="uploadDocumentForm.controls.fileName.hasError('required')">
+                File Name is <strong>required</strong>
+            </mat-error>
+        </mat-form-field>
 
-    <mat-form-field fxFlex>
-      <mat-label>Description</mat-label>
-      <input formControlName="description" matInput />
-    </mat-form-field>
+        <mat-form-field fxFlex >
+            <mat-label>Description</mat-label>
+            <input formControlName="description" matInput />
+        </mat-form-field>
 
-    <mifosx-file-upload flex="60%" (change)="onFileSelect($event)"></mifosx-file-upload>
+        <mifosx-file-upload flex="60%" (change)="onFileSelect($event)"></mifosx-file-upload>
 
-    <mat-dialog-actions align="end">
-      <button mat-raised-button mat-dialog-close>Cancel</button>
-      <button mat-raised-button color="primary" [disabled]="!uploadDocumentForm.valid" *midasHasPermission="'CREATE_DOCUMENT'"
-        [mat-dialog-close]="{data: {name: uploadDocumentForm.value.name, description: uploadDocumentForm.value.description, file: uploadDocumentForm.value.file} }">Confirm</button>
-    </mat-dialog-actions>
+        <mat-dialog-actions align="end">
+            <button mat-raised-button mat-dialog-close>Cancel</button>
+            <button mat-raised-button color="primary" [disabled]="!uploadDocumentForm.valid" [mat-dialog-close]="uploadDocumentForm.value">Confirm</button>
+        </mat-dialog-actions>
 
-  </form>
+    </form>
 </div>
